# sennheiser-desktop-client

./: .gitignore  CMakeLists.txt  Info.cmake.macos.plist  Main.qml  README.md  main.cpp  sennheiserDesktopClient.desktop
.github/workflows/: ci.yml
btuicontrols/: ANCCard2.qml  ANCCardHelper.cpp  ANCCardHelper.h  AboutDialog.qml  AppSettings.qml  BluetoothHandler.cpp  BluetoothHandler.h  CMakeLists.txt  CallSettingsCard.qml  CallSettingsCardHelper.cpp  CallSettingsCardHelper.h  ConnectPage.qml  ConnectedDevicesCard.qml  ConnectedDevicesCardHelper.cpp  ConnectedDevicesCardHelper.h  Database.js  DatabaseStorage.qml  DeviceInfoCard.qml  DeviceInfoCardHelper.cpp  DeviceInfoCardHelper.h  DeviceListPage.qml  DevicePage.qml  FoundDeviceCard.qml  OnHeadSettingsCard.qml  OnHeadSettingsCardHelper.cpp  OnHeadSettingsCardHelper.h  SettingsDialog.qml  UiHelper.qml
gaiaV3/: BluetoothSocketWrapper.cpp  BluetoothSocketWrapper.h  CMakeLists.txt  GAIAPropertyBase.cpp  GAIAPropertyBase.h  GAIAPropertyManagerBase.cpp  GAIAPropertyManagerBase.h  GAIARfcommClient.cpp  GAIARfcommClient.h  m4.json
gaiaV3/scripts/: property_creator.py  property_manager_creator.py
gaiaV3/tests/: CMakeLists.txt  mock_classes.cpp  mock_classes.h  test_BluetoothSocketWrapper.cpp  test_GAIAPropertyBase.cpp  test_GAIARfcommClient.cpp
misc/: setup_dmg.scpt.in
resources/: sennheiserDesktopClient.icns
